--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<div style="color:yellow; background-color:pink; border:solid; font-family:Comic Sans MS;">Matthew</div>
+<div style="color:yellow; background-color:pink; border:solid; font-family:Comic Sans MS;">
+  <h1>
+    Matthew
+  </h1>
+</div>
